--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "private": true,
   "homepage": "https://MateuszFrankowski.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.17",
+    "@chakra-ui/react": "^2.5.3",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "formik": "^2.2.9",
+    "framer-motion": "^10.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
