--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "formik": "^2.2.9",
@@ -22,7 +22,7 @@
     "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.2",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.9",
@@ -32,8 +32,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint:js": "eslint src/**/*.{js,jsx}"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
