--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.4",
     "formik": "^2.2.9",
     "framer-motion": "^10.8.5",
+    "lint": "^0.8.19",
     "react": "^18.2.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
