--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "eslint": "^8.36.0",
     "formik": "^2.2.9",
     "framer-motion": "^10.8.5",
     "lint": "^0.8.19",
