--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
-    "eslint": "^8.36.0",
-    "formik": "^2.2.9",
     "framer-motion": "^10.8.5",
-    "lint": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
@@ -33,8 +30,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint:js": "eslint src/**/*.{js,jsx}"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
